# gas-and-energy-mechanics-copilot

./: .env_sample  .gitignore  Dockerfile  RAG_IMPLEMENTATION.md  README.md  justfile  pyproject.toml  run_chatbot.sh  run_server.sh  test_rag_retrieval.py
.streamlit/: config.toml
config/: production.settings.toml  settings.toml  uvicorn-logging-config.json
crew/: .env.example  .gitignore  README.md  pyproject.toml
crew/src/pipeline_safety_rag_crew/: crew.py  main.py
crew/src/pipeline_safety_rag_crew/config/: agents.yaml  tasks.yaml
crew/src/pipeline_safety_rag_crew/tools/: __init__.py  memory_tool.py  rag_tool.py  web_search_tool.py
evaluation/: __init__.py  dataset_generator.py  deepeval_suite.py  trulens_setup.py
evaluation/data/: gold_qa.json
iam/: apprunner-service.json  apprunner-task-role-policy.json
scripts/: build-and-push.sh  build_index.py  generate_eval_dataset.py  streamlit.py
src/brightai/: logging.py
src/brightai/ai_copilot/: entrypoint.py
src/brightai/ai_copilot/api/: __version__.py  debug.py  health.py  version.py
src/brightai/ai_copilot/core/: application.py  router.py  service_manager.py
src/brightai/ai_copilot/middleware/: logging.py
src/brightai/ai_copilot/services/: agent_service.py  rag_service.py
src/gas_energy_copilot/: logging.py
src/gas_energy_copilot/ai_copilot/: entrypoint.py
src/gas_energy_copilot/ai_copilot/api/: __version__.py  debug.py  health.py  version.py
src/gas_energy_copilot/ai_copilot/api/v1/endpoints/: __init__.py  chat.py  evaluation.py
src/gas_energy_copilot/ai_copilot/core/: application.py  config.py  router.py  service_manager.py
src/gas_energy_copilot/ai_copilot/middleware/: logging.py
src/gas_energy_copilot/ai_copilot/services/: __init__.py  agent_service.py  evaluation_service.py  memory.py  rag_service.py  tracing.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_api.py  test_bedrock_auth.py  test_chatbot_e2e.py  test_eval_metrics.py  test_memory.py  test_router_agent.py
