[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "coverage>=7.11.0",
  "mypy[faster-cache]>=1.18.2",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-integration>=0.2.3",
  "pytest-mock>=3.15.1",
  "pytest-timeout>=2.3.0",    # --timeout flag for slow eval tests
  "pytest-asyncio>=0.23.0",   # async test support for SSE endpoint tests
  "streamlit>=1.51.0",
  "uvicorn[standard]>=0.38.0"
]

[project]
dependencies = [
  # ── Core API ────────────────────────────────────────────────────────────
  "fastapi[standard]",          # REST API framework with OpenAPI spec generation
  "typed-settings>=25.0.0,<26.0.0",  # Type-safe TOML config loading
  "typed-settings[attrs]",      # attrs backend for typed-settings
  "uvicorn[standard]",          # ASGI server (includes uvloop, httptools for speed)
  "structlog>=24.0.0",          # Structured logging (JSON for CloudWatch)
  "asgi-correlation-id>=4.3.4", # X-Correlation-ID header middleware

  # ── Multi-agent Crew ────────────────────────────────────────────────────
  "pipeline-safety-rag-crew",   # Local editable package (crew/ directory)
  "faiss-cpu>=1.9.0",           # FAISS vector similarity search (CPU build)
  "boto3>=1.35.0",              # AWS SDK: Bedrock, DynamoDB, ECR, App Runner
  "pandas>=2.0.0",              # DataFrame operations for chunk processing
  "pyarrow>=18.0.0",            # Parquet I/O for chunks.parquet storage

  # ── Tracing & Observability ─────────────────────────────────────────────
  # langfuse: LLM observability with trace/span hierarchy and quality scores.
  # Integrates via LiteLLM callbacks (zero CrewAI code changes needed).
  # Alternative: Arize Phoenix (better for embedding drift monitoring).
  "langfuse>=2.0.0",

  # ── Streaming ───────────────────────────────────────────────────────────
  # sse-starlette: Server-Sent Events for FastAPI.
  # Alternative: asyncio.Queue + Starlette StreamingResponse (more boilerplate).
  "sse-starlette>=2.0.0",

  # ── Evaluation (optional at runtime — used by eval endpoints + tests) ───
  # deepeval: LLM evaluation framework with pytest integration.
  # Use for CI/CD quality gates (see tests/test_eval_metrics.py).
  # Alternative: promptfoo (CLI-based), RAGAS metrics (less pytest integration).
  "deepeval>=1.0.0",

  # trulens-eval: Live RAG Triad monitoring with dashboard.
  # Use for production quality monitoring (see evaluation/trulens_setup.py).
  # Alternative: TruLens is unique — no direct equivalent for live RAG monitoring.
  "trulens-eval>=1.0.0",

  # ragas: Synthetic QA dataset generation from document corpus.
  # Also provides RAGAS metrics (context recall, faithfulness, etc.).
  # Use for dataset generation (scripts/generate_eval_dataset.py).
  "ragas>=0.1.0",

  # langchain-core: Required by RAGAS for Document format.
  # langchain-aws: Bedrock integration for RAGAS (LLM + embeddings backend).
  "langchain-core>=0.1.0",
  "langchain-aws>=0.1.0",
]
name = "gas-and-energy-mechanics-copilot"
description = "RAG-powered AI chatbot for gas & energy engineering documentation, built on Amazon Bedrock Nova Lite and FAISS."
readme = "README.md"
requires-python = "~=3.13.0"
version = "1.0.0"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["mypy", "ruff"]

[tool.coverage.report]
exclude_lines = ["@(abc\\.)?abstractmethod", "\\.\\.\\.$", "# pragma: no cover"]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
omit = ["src/gas_energy_copilot/**/__version__.py", "tests/*"]
parallel = true
relative_files = true
sigterm = true

[tool.hatch.build.hooks.version]
path = "src/gas_energy_copilot/ai_copilot/api/__version__.py"
template = '''
# DO NOT MODIFY
# This file was automatically generated via uv-dynamic-versioning.
# Changes to this file are ignored by git.

__version__ = "{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["src/gas_energy_copilot"]

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
files = "src/,tests/"
follow_imports = "normal"
ignore_missing_imports = true
mypy_path = "src/,stubs/,tests/"
namespace_packages = true
no_implicit_reexport = true
plugins = []
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pyrefly]
project-includes = ["src/", "tests/"]
search-path = ["src/", "tests/"]
ignore-missing-imports = ["*"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
unfixable = ["F841"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["gas_energy_copilot"]

[tool.uv.sources]
pipeline-safety-rag-crew = { path = "crew", editable = true }

[tool.uv]
package = true
cache-keys = [
  {file = "pyproject.toml"},
  {git = {commit = true, tags = true}}
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
dirty = true
fallback-version = "0.0.0"
